# DEM012-CI-CD-Workflow-Automation-with-Github

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  plan.md  pyproject.toml  rav.yaml  requirements.txt  user_guide.md
.github/workflows/: ci_cd_pipeline.yml
dags/: clickstream_pipeline.py  enrichment_logic.py
data_generator/: generate_data.py
docker/airflow/: Dockerfile
docs/: DEM012-architecture.excalidraw  project-architecture.excalidraw
docs/screenshots/: README.md  arch.md  dashboard-screenshots.md  pipeline-screenshots.md
great_expectations/expectations/: enriched_funnel_suite.json  raw_events_suite.json  raw_products_suite.json  raw_users_suite.json
scripts/: trigger_dag.py  validate_data_flow.py
tests/: test_enrich_ai_logic.py  test_generate_data_io.py  test_pipeline_hardening.py  test_transformations.py  test_trigger_dag.py  test_validate_data_flow.py
